<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.atthis.atthisdemo.TaskDetailSellerActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_car_make"
            android:layout_width="58dp"
            android:layout_height="17dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/carMake" />

        <TextView
            android:id="@+id/tv_car_model"
            android:layout_width="58dp"
            android:layout_height="17dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/carModel" />

        <TextView
            android:id="@+id/tv_car_id"
            android:layout_width="58dp"
            android:layout_height="17dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/carDataId" />

        <TextView
            android:id="@+id/tv_car_vin"
            android:layout_width="58dp"
            android:layout_height="17dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/vin" />

        <TextView
            android:id="@+id/tv_car_year"
            android:layout_width="58dp"
            android:layout_height="17dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/carYear" />

        <TextView
            android:id="@+id/tv_car_mileage"
            android:layout_width="58dp"
            android:layout_height="17dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/carMileage" />

    </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
